--- a/WebApplication2/Pages/About.cshtml
+++ b/WebApplication2/Pages/About.cshtml
@@ -7,7 +7,8 @@
     <h2>Our Team of Developers</h2>
     <ul>
         <li>
-            <p>Austin Allred</p>
+            <p>Austin Allred </p>
+            <a>www.linkedin.com/in/austin-allred-b47b442b2</a>
         </li>
         <li>
             <p>Gavin Evans</p>
