Forgot to add LinkedIn

--- a/WebApplication2/Pages/About.cshtml
+++ b/WebApplication2/Pages/About.cshtml
@@ -16,8 +16,7 @@
     <h2>Our Team of Developers</h2>
     <ul>
         <li>
-            <p>Austin Allred </p>
-            <a>www.linkedin.com/in/austin-allred-b47b442b2</a>
+            <p>Austin Allred &nbsp;&#x2022;&nbsp; <a href="https://www.linkedin.com/in/austin-allred-b47b442b2" target="_blank">LinkedIn</a></p>
         </li>
         <li>
             <p>Gavin Evans</p>
@@ -29,7 +28,7 @@
             <p>Alloryn Mappin</p>
         </li>
         <li>
-            <p>Nicholas Stephenson &nbsp;&#x2022;&nbsp; <a href="mailto:nickstephensonweber@gmail.com" target="_blank">Email</a> &nbsp;&#x2022;&nbsp; GitHub: <a href="https://github.com/NickStepWeber" target="_blank">School</a> - <a href="https://github.com/NickILStep" target="_blank">Personal</a></p>
+            <p>Nicholas Stephenson &nbsp;&#x2022;&nbsp; <a href="https://www.linkedin.com/in/nickstep/" target="_blank">LinkedIn</a> &nbsp;&#x2022;&nbsp; <a href="mailto:nickstephensonweber@gmail.com" target="_blank">Email</a> &nbsp;&#x2022;&nbsp; GitHub: <a href="https://github.com/NickStepWeber" target="_blank">School</a> - <a href="https://github.com/NickILStep" target="_blank">Personal</a></p>
         </li>
     </ul>
 </div>
